@@ -8,14 +8,16 @@ import java.sql.Statement;
 public class DatabaseInitService {
     public static void main(String[] args) {
         try {
-            String sql = new String(Files.readAllBytes(Paths.get("sql/init_db.sql")));
+            String sql = Files.readString(Paths.get("sql/init_db.sql"));
 
-            Connection conn = Database.getInstance().getConnection();
-            Statement stmt = conn.createStatement();
+            try (Connection conn = Database.getInstance().getConnection();
+                 Statement stmt = conn.createStatement()) {
 
-            stmt.execute(sql);
+                stmt.execute(sql);
+            }
 
             System.out.println("DB initialized");
+
         } catch (Exception e) {
             e.printStackTrace();
         }
